perfect scrollbar fix

--- a/src/app/creatures/creatures-display/creatures-display.component.css
+++ b/src/app/creatures/creatures-display/creatures-display.component.css
@@ -19,7 +19,7 @@ p {
 }
 
 .container-lg {
-  width: calc(55rem - 8px);
+  width: calc(55rem - 7px);
 }
 .container-sm {
   width: calc(100vw - 1rem + 1px);
