--- a/src/app/creatures/creatures.component.css
+++ b/src/app/creatures/creatures.component.css
@@ -30,7 +30,7 @@
 }
 
 .data-table {
-  overflow-y: auto;
+  overflow-y: scroll;
   height: calc(100% - 3rem);
   overflow-x: hidden;
   scrollbar-width: thin;
