--- a/src/app/spells/spells.component.css
+++ b/src/app/spells/spells.component.css
@@ -30,7 +30,7 @@
 }
 
 .data-table {
-  overflow-y: auto;
+  overflow-y: scroll;
   box-sizing: border-box;
   height: calc(100% - 3rem);
   overflow-x: hidden;
