--- a/src/styles.css
+++ b/src/styles.css
@@ -67,7 +67,8 @@ span {
 ::-webkit-scrollbar-track {
   position: fixed;
   right: 0;
-  background: rgba(0, 0, 0, 0.1);
+  /* background: rgba(0, 0, 0, 0.1); */
+  background: transparent;
   border-radius: 2px;
 }
 ::-webkit-scrollbar-thumb {
